# ForceField3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: Application.cpp
src/common/: Array.hpp  Core.hpp  DbgPrint.hpp  Error.cpp  Error.hpp  Exception.hpp  File.cpp  File.hpp  Image.cpp  Image.hpp  Json.hpp  JsonUtils.cpp  JsonUtils.hpp  Material.hpp  MaterialContainer.cpp  MaterialContainer.hpp  MathUtils.hpp  Matrix.hpp  Mesh.hpp  MeshGeneration.cpp  MeshGeneration.hpp  MeshObject.cpp  MeshObject.hpp  Object.cpp  Object.hpp  Settings.cpp  Settings.hpp  SmartMovingOp.hpp  StringUtils.cpp  StringUtils.hpp  Texture.hpp  ThreadPool.hpp  TickObserver.cpp  TickObserver.hpp  Timing.cpp  Timing.hpp  Tracer.cpp  Tracer.hpp  TransformationMatrix.hpp  Vec.hpp
src/common/application/: IApplication.hpp
src/common/input_devices/: Cursor3DObserver.cpp  Cursor3DObserver.hpp  CursorManager.cpp  CursorManager.hpp  KeyObserver.cpp  KeyObserver.hpp  MotionEvent.cpp  MotionEvent.hpp
src/common/platform/: Platform.h
src/common/platform/pc/: GlutApp.cpp  PcFile.cpp
src/common/render/: DrawCommand.cpp  DrawCommand.hpp  DrawingQueue.cpp  DrawingQueue.hpp  DrawingQueuePlayback.cpp  DrawingQueuePlayback.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLDefs.hpp  ShaderVariable.cpp  ShaderVariable.hpp
src/common/render/program/: DefaultShader.cpp  DefaultShader.hpp  IDrawingProgram.cpp  IDrawingProgram.hpp  LightHandler.cpp  LightHandler.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp
src/forcefield/: ChargeManipulator.cpp  ChargeManipulator.hpp  EquiPotFace.cpp  EquiPotFace.hpp  ForceFieldOp.cpp  ForceFieldOp.hpp  ForceFieldState.cpp  ForceFieldState.hpp  ForceLines.cpp  ForceLines.hpp  PointCharges.cpp  PointCharges.hpp  SurfaceMeshing.cpp  SurfaceMeshing.hpp
src/scene/: Cursor3D.cpp  Cursor3D.hpp  Scene.cpp  Scene.hpp  VisualSettings.hpp
src/showobj/: ShowObjOp.hpp
